--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -6,6 +6,9 @@
     <%= posts.name %>
     <% end %><br>
 
+    <p>ジャンル名</p>
+    <%= posts.genre %>
+
     <p>商品説明</p>
     <%= posts.introduction %><br>
 
