--- a/app/views/admin/genres/new.html.erb
+++ b/app/views/admin/genres/new.html.erb
@@ -1,13 +1,21 @@
 <%= render "admin/admin_header" %>
-
-<%= form_with model: @genre, url: admin_genres_path, method: :post, local: true do |f| %>
+<div>
+<%= form_with model: @genre, url: admin_genres_path, method: :post do |f| %>
   <%= f.label :name, "ジャンル名" %>
   <%= f.text_field :name %>
   <%= f.submit"ジャンル追加" %>
 <% end %>
+</div>
 
-<% @genres.each do |genres| %>
+<div>
+<% @genres.each do |f| %>
 
-<%= genres.name %>
+  <p><%= f.name %></p>
+
+  <%= link_to admin_genre_path(@genres.ids), method: :delete do %>
+  <button class = "btn-danger">削除する</button>
+  <% end %>
 
 <% end %>
+</div>
+
