--- a/app/views/public/_public_header.html.erb
+++ b/app/views/public/_public_header.html.erb
@@ -29,10 +29,13 @@
       </ul>
     </div>
       <div class="navbar-nav mr-auto">
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+        <div class="search_form">
+          <%= form_tag(search_path,:method => 'get') do %>
+            <%= label_tag '出品名で検索' %>
+            <%= text_field_tag :search %>
+            <%= submit_tag 'Search', :name => nil %>
+          <% end %>
+        </div>
       </div>
 
   </div>
