--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -21,3 +21,32 @@
 <% else %>
         <%= image_tag 'no_image', size: "200x200" %>
 <% end %>
+
+<div>
+  <p>コメント件数：<%= @post.comments.count %></p>
+  <% @comments.each do |post_comment| %>
+    <%= post_comment.customer.nickname %>さん<br>
+    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+  <% end %>
+</div>
+
+<div>
+  <%= form_with model: [@post, @comment], url: post_comments_path(@post.id), method: :post do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+  <% end %>
+</div>
+
+<% if @post.favorited_by?(current_customer) %>
+    <p>
+      <%= link_to post_likes_path(@post), method: :delete do %>
+        ♥<%= @post.likes.count %> いいね
+      <% end %>
+    </p>
+    <% else %>
+    <p>
+      <%= link_to post_likes_path(@post), method: :post do %>
+        ♡<%= @post.likes.count %> いいね
+      <% end %>
+    </p>
+  <% end %></div>
