--- a/app/views/public/_public_header.html.erb
+++ b/app/views/public/_public_header.html.erb
@@ -11,10 +11,13 @@
           <%= link_to "投稿する",new_post_path,class: "nav-link" %>
       </li>
       <li class="nav-item">
-          <%= link_to "Myいいね",root_path,class: "nav-link" %>
+          <%= link_to "商品一覧",root_path,class: "nav-link" %>
       </li>
       <li class="nav-item">
-          <%= link_to "マイページ",root_path,class: "nav-link" %>
+          <%= link_to "Myいいね",mylike_path,class: "nav-link" %>
+      </li>
+      <li class="nav-item">
+          <%= link_to "マイページ",customers_path,class: "nav-link" %>
       </li>
       <li class="nav-item">
           <%= link_to "ログアウト",destroy_customer_session_path, method: :delete, class: "nav-link"%>
@@ -43,10 +46,10 @@
           <%= link_to "商品一覧",root_path,class: "nav-link" %>
       </li>
       <li class="nav-item">
-          <%= link_to "新規登録",root_path,class: "nav-link" %>
+          <%= link_to "新規登録",new_customer_registration_path,class: "nav-link" %>
       </li>
       <li class="nav-item">
-          <%= link_to "ログイン",root_path,class: "nav-link" %>
+          <%= link_to "ログイン",new_customer_session_path,class: "nav-link" %>
       </li>
     </ul>
     <div class="navbar-nav mr-auto">
