--- a/app/views/public/contracts/show.html.erb
+++ b/app/views/public/contracts/show.html.erb
@@ -1,7 +1,9 @@
 <%= render "public/public_header" %>
 
 <div class = "container">
-  <div class = "row">
-    
+  <div class = "row text-center">
+    <div class = "col">
+      <h2>購入履歴詳細</h2>
+    </div>
   </div>
 </div>
