--- a/app/views/public/contracts/show.html.erb
+++ b/app/views/public/contracts/show.html.erb
@@ -1,9 +1,30 @@
 <%= render "public/public_header" %>
 
 <div class = "container">
-  <div class = "row text-center">
+  <div class = "row text-center pt-2">
     <div class = "col">
       <h2>購入履歴詳細</h2>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+      <table class = "table">
+        <tbody>
+          <tr>
+            <th>出品者名</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th>購入者</th>
+            <th></th>
+          </tr>
+          <tr>
+            <th>宛先</th>
+            <th></th>
+          </tr>
+        </tbody>
+      </table>
     </div>
   </div>
 </div>
