--- a/app/views/public/contracts/thanks.html.erb
+++ b/app/views/public/contracts/thanks.html.erb
@@ -17,7 +17,7 @@
     <div class = "col">
       <p>
       こちらから払込完了手続きしてください。支払い完了後発送されます。|
-      <%= link_to "購入履歴一覧画面", contract_path(@post_id) %>
+      <%= link_to "購入履歴一覧画面", contract_path(id: session[:post_id]) %>
       </p>
     </div>
   </div>
