--- a/app/views/public/contracts/index.html.erb
+++ b/app/views/public/contracts/index.html.erb
@@ -1,1 +1,21 @@
-<p><%= @customer.first_name %><%= @customer.last_name %>さんの取引履歴一覧</p>
+<%= render "public/public_header" %>
+<div class = "container">
+  <div class = "row">
+    <div class = "col">
+      <div class = "text-center font-weight-bold"><%= @customer.first_name %><%= @customer.last_name %>さんの取引履歴一覧</div>
+    </div>
+  </div>
+  <div class = "row h-auto">
+    <div class = "col d-flex flex-wrap">
+      <% @contracts.each do |contract| %>
+        <%= link_to contract_path(contract) do %>
+          <div class = "border h-90 w-100">
+            <%= contract.post.name %>
+            <%= contract.post.introduction %>
+            <%= contract.post.price %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+</div>
