--- a/app/views/public/posts/mylike.html.erb
+++ b/app/views/public/posts/mylike.html.erb
@@ -1,14 +1,16 @@
 <%= render "public/public_header" %>
-<% if @like_count > 0 %>
+<% if @like_count.present? && @like_count > 0 %>
   <div class = "container">
     <div class = "row text_center">
       <h1>Myいいねリスト</h1>
     </div>
-    
+
     <div class = "row">
       <% @likes.each do |like| %>
         <% post = Post.find(like.post_id) %>
-        <p><%= post.title %></p>
+        <%= post.name %>
+        <%= post.introduction %>
+        <%= post.price %>
       <% end %>
     </div>
   </div>
