--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -7,7 +7,7 @@
   
   <div class = "div">
     <p>ジャンル名</p>
-    <%= @post.genre %>
+    <%= @post.genre.name %>
   </div>
   
   <div class = "div">
