--- a/app/views/public/contracts/show.html.erb
+++ b/app/views/public/contracts/show.html.erb
@@ -25,7 +25,7 @@
     </div>
   </div>
   
-  <div class = "row border-top text-center">
+  <div class = "row border-top border-bottom text-center">
     <div class = "col">
       <p>宛先</p>
     </div>
@@ -34,6 +34,33 @@
     </div>
     <div class = "col">
       <p><%= @address.postal_code %></p>
+    </div>
+  </div>
+  
+  <div class = "row my-2">
+    <div class = "col">
+      <h3 class = "text-center">こちらから更新してください</h3>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+      <% if @contract.contract_status == "completed" %>
+      <h3>購入完了済です</h3>
+      <% else %>
+        <% if current_customer.id == @buyer.id %>
+          <%= form_with model: @contract, url: contract_path, method: :patch do |f| %>
+            <%= f.select :payment_status, Contract.payment_statuses.keys.map {|k| [I18n.t("enums.contract.payment_status.#{k}"), k]}%>
+            <%= f.submit '更新', class: 'btn btn-primary' %>
+          <% end %>
+        <% elsif current_customer.id == @customer.id %>
+          <%= form_with model: @contract, url: contract_path, method: :patch do |f| %>
+            <%= f.select :delivery_status, Contract.delivery_statuses_i18n.keys %>
+          
+            <%= f.submit '更新', class: 'btn btn-primary' %>
+          <% end %>
+        <% end %>
+      <% end %>
     </div>
   </div>
 
