--- a/app/views/public/customers/index.html.erb
+++ b/app/views/public/customers/index.html.erb
@@ -14,7 +14,7 @@
   
   <div class = "row my-2 border-top">
     <div class = "col text-center">
-      <%= link_to "投稿一覧", list_path %>
+      <%= link_to "投稿一覧", list_path(@customer) %>
     </div>
   </div>
   
