--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,5 +1,11 @@
 <%= render "public/public_header" %>
 
+<% if flash[:error] %>
+  <div class="error">
+    <%= flash[:error] %>
+  </div>
+<% end %>
+
 <%= form_with model: @post, url: posts_path, method: :post, local: true do |f| %>
   <p>出品名</p>
   <%= f.text_field :name, placeholder: "パーツ名など" %>
