--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,32 +1,88 @@
 <%= render "public/public_header" %>
-
-<%= form_with model: @customer, url: customer_path, method: :patch do |f| %>
-
-  <%= f.label :first_name, "姓" %>
-  <%= f.text_field :first_name %>
-
-  <%= f.label :first_name_kana, "セイ" %>
-  <%= f.text_field :first_name_kana %>
-
-  <%= f.label :last_name, "名" %>
-  <%= f.text_field :last_name %>
-
-  <%= f.label :last_name_kana, "メイ" %>
-  <%= f.text_field :last_name_kana %>
-
-  <%= f.label :nickname, "ニックネーム" %>
-  <%= f.text_field :nickname %>
-
-  <%= f.label :introduction, "自己紹介" %>
-  <%= f.text_field :introduction %>
-
-  <%= f.label :email, "メール" %>
-  <%= f.text_field :email %>
-
-  <%= f.label :telephone_number, "電話番号" %>
-  <%= f.text_field :telephone_number %>
-
-  <%= f.submit "内容を変更する" %>
-
-
-<% end %>
+<div class = "container">
+  
+  <%= form_with model: @customer, url: customer_path, method: :patch do |f| %>
+  <div class = "row mt-4">
+    <div class = "col">
+    <%= f.label :first_name, "姓" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :first_name %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :first_name_kana, "セイ" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :first_name_kana %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :last_name, "名" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :last_name %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :last_name_kana, "メイ" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :last_name_kana %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+      <%= f.label :nickname, "ニックネーム" %>
+    </div>
+    <div class = "col">
+      <%= f.text_field :nickname %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :introduction, "自己紹介" %>
+    </div>
+    <div class = "col">
+    <%= f.text_area :introduction %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :email, "メール" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :email %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :telephone_number, "電話番号" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :telephone_number %>
+    </div>
+  </div>
+  
+  <div class = "row">
+    <div class = "col">
+    <%= f.label :introduction, "自己紹介欄" %>
+    </div>
+    <div class = "col">
+    <%= f.text_field :introduction %>
+    </div>
+  </div>
+  
+    <%= f.submit "内容を変更する" %>
+  <% end %>
+</div>
