--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -10,5 +10,5 @@
 <% end %>
 
 <div>
-  <%= link_to "出品中の商品", list_path(@customer) %>
+  <%= link_to "出品中の商品", list_path(id: @customer.id) %>
 </div>
