--- a/app/views/public/posts/list.html.erb
+++ b/app/views/public/posts/list.html.erb
@@ -3,7 +3,7 @@
   <div class = "row">
     <div class = "col">
       <% @posts.each do |post| %>
-        <%= link_to contract_path(post) do %>
+        <%= link_to post_path(post) do %>
         <%= post.name %>
         <%= post.introduction %>
         <%= post.price %>
@@ -11,4 +11,5 @@
       <% end %>
     </div>
   </div>
+  <%= paginate @posts %>
 </div>
