--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,5 +1,8 @@
 <%= render "public/public_header" %>
 <div class = "container">
+  <% unless customer_signed_in? %>
+  <h3>購入にはログインが必要です</h3>
+  <% end %>
   <div class = "div">
     <p>商品名</p>
     <%= @post.name %>
@@ -78,15 +81,17 @@
   <% end %></div>
   <div class = "row">
     <div class = "col text-center">
-      <% if @show_button %>
-        <%= link_to "購入", confirm_path, class: "btn btn-primary" %>
-      <% else %>
-        <p class="text-danger">
-          ※購入には
-          <%= link_to "会員登録（ログイン）", new_customer_session_path, class: 'text-danger border-bottom border-danger' %>と
-          <%= link_to "住所の登録が必要です", new_address_path, class: 'text-danger border-bottom border-danger' %>
-        </p>
-    <% end %>
+      <% unless current_customer.id == @post.id %>
+        <% if @show_button %>
+          <%= link_to "購入", confirm_path, class: "btn btn-primary" %>
+        <% else %>
+          <p class="text-danger">
+            ※購入には
+            <%= link_to "会員登録（ログイン）", new_customer_session_path, class: 'text-danger border-bottom border-danger' %>と
+            <%= link_to "住所の登録が必要です", new_address_path, class: 'text-danger border-bottom border-danger' %>
+          </p>
+        <% end %>
+      <% end %>
     </div>
   </div>
 <% end %>
