--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
   <h2>新規会員登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_with model: @customer, url: customer_registration_path do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
@@ -38,6 +38,12 @@
   <div class="field">
     <%= f.label :telephone_number, "電話番号" %>
     <%= f.text_field :telephone_number %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :introduction, "自己紹介欄" %>
+    <%= f.text_field :introduction %>
+    <p>＊あとで設定もできます</p>
   </div>
 
   <div class="field">
