--- a/app/views/public/_public_header.html.erb
+++ b/app/views/public/_public_header.html.erb
@@ -3,6 +3,9 @@
   <p class="navbar-brand border border-dark pt-1 pb-2 pl-4 pr-4">
     <%= link_to "OPL",root_path %>
   </p>
+  <div>
+    <%= current_customer.nickname %>さんようこそ
+  </div>
 
   <div class="collapse navbar-collapse flex-column ml-auto" id="navbarSupportedContent">
 
