--- a/app/views/admin/_admin_header.html.erb
+++ b/app/views/admin/_admin_header.html.erb
@@ -1,10 +1,13 @@
-<nav class = "navber border">
-  <ul class = "navber-nav">
-    <li class = "nav-item">
-      <%= link_to "トップ", admin_top_path %>
-    </li>
-    <li class = "nav-item">
-      <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-    </li>
-  </ul>
-</nav>
+<div class = "container-fluid">
+  <nav class = "navbar bg-secondary">
+    <div class = "row">
+      <div class = "col offset-2">
+        <%= link_to "トップ", admin_top_path, class: "text-dark" %>
+      </div>
+  
+      <div class = "col">
+          <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+      </div>
+    </div>
+  </nav>
+</div>
