--- a/app/views/public/customers/index.html.erb
+++ b/app/views/public/customers/index.html.erb
@@ -26,7 +26,7 @@
   
   <div class = "row my-2 border-top border-bottom">
     <div class = "col text-center">
-      <%= link_to "出品した取引履歴", contracts_path %>
+      <%= link_to "出品した取引履歴", seller_path %>
     </div>
   </div>
 </div>
