--- a/app/views/public/customers/index.html.erb
+++ b/app/views/public/customers/index.html.erb
@@ -20,7 +20,7 @@
   
   <div class = "row my-2 border-top border-bottom">
     <div class = "col text-center">
-      <%= link_to "購入された取引履歴", contracts_path %>
+      <%= link_to "購入した取引履歴", contracts_path %>
     </div>
   </div>
   
