--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -3,6 +3,15 @@
   <% unless customer_signed_in? %>
   <h3>購入にはログインが必要です</h3>
   <% end %>
+  
+  <% if current_customer == @post.customer %>
+    <div class = "row">
+        <div class = "col">
+            <%= link_to "内容を変更する", edit_post_path(@post) %>
+        </div>
+    </div>
+  <% end %>
+  
   <div class = "div">
     <p>商品名</p>
     <%= @post.name %>
